[gd_scene load_steps=4 format=3 uid="uid://bvjdw5gtacqjj"]

[ext_resource type="Script" uid="uid://0sr82fmnrlqq" path="res://game_controller.gd" id="1_soqow"]
[ext_resource type="PackedScene" uid="uid://bt0ym25h4jykj" path="res://scenes/world_2d.tscn" id="2_vgxje"]
[ext_resource type="PackedScene" uid="uid://ddp40j6fm5vaa" path="res://scenes/Room Scenes/foyer_room.tscn" id="3_vgxje"]

[node name="GameController" type="Node" node_paths=PackedStringArray("world_2d", "gui")]
script = ExtResource("1_soqow")
world_2d = NodePath("World2D")
gui = NodePath("GUI")

[node name="World2D" parent="." instance=ExtResource("2_vgxje")]

[node name="Foyer_Room" parent="World2D" instance=ExtResource("3_vgxje")]

[node name="TextEdit" type="TextEdit" parent="World2D"]
offset_left = 324.0
offset_top = 376.0
offset_right = 642.0
offset_bottom = 506.0

[node name="RichTextLabel" type="RichTextLabel" parent="World2D"]
offset_left = 304.0
offset_top = 40.0
offset_right = 754.0
offset_bottom = 280.0

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
